--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--text-color-black);
-  /* background-color: var(--text-color-white); */
-  background-color: turquoise;
+  background-color: var(--text-color-white);
 }
 
 /*шапка сайта*/
@@ -54,8 +53,6 @@ body {
   width: 1170px;
   padding-left: 15px;
   padding-right: 15px;
-  /* delete */
-  outline: 2px solid tomato;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -88,7 +85,6 @@ body {
 .hero {
   background-color: var(--background-color-gray);
   text-align: center;
-
   padding: 200px 0 200px 0;
 }
 .hero-title {
