--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ a {
   --background-color-gray: #2f303a;
   --background-color-bottom: #f5f4fa;
   --border-color: #ececec;
+  --border-color-projects: #eeeeee;
 }
 
 /*общие стили для index.html */
@@ -50,23 +51,37 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1170px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+}
+.header-nav {
+  align-items: center;
+  display: flex;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   color: var(--accent-color);
+  display: flex;
 }
 .studio-logo {
   color: var(--text-color-black-logo);
 }
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
 
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
 .nav-link {
   font-weight: 500;
   letter-spacing: 0.02em;
+  display: flex;
+  padding: 32px 0px;
 }
 .current.nav-link {
   color: var(--accent-color);
@@ -74,6 +89,14 @@ body {
 .contact-link {
   color: var(--text-color-grey);
 }
+.auth-nav {
+  display: flex;
+  margin-left: auto;
+}
+.auth-nav .item + .item {
+  margin-left: 50px;
+}
+
 .nav-link:hover,
 .nav-link:focus,
 .contact-link:hover,
@@ -83,17 +106,17 @@ body {
 
 /* секция герой  */
 .hero {
-  background-color: var(--background-color-gray);
   text-align: center;
-  padding: 200px 0 200px 0;
+  background-color: var(--background-color-gray);
+  padding: 200px 0;
 }
 .hero-title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
-  color: var(--text-color-white);
   text-transform: uppercase;
+  color: var(--text-color-white);
   margin-bottom: 30px;
 }
 .hero-button {
@@ -115,16 +138,23 @@ body {
   display: none;
 }
 .about-us {
-  padding: 94px 0 94px 0;
+  padding: 94px 0;
 }
 .about-us-list {
+  display: flex;
   margin-bottom: 94px;
+}
+.about-us-list li {
+  width: 270px;
+}
+.about-us-list li:not(:last-child) {
+  margin-right: 30px;
 }
 
 .about-us-title {
-  margin-bottom: 10px;
   font-weight: 700;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .about-us-text {
   line-height: 1.71;
@@ -137,9 +167,13 @@ body {
   text-align: center;
   margin-bottom: 50px;
 }
-.what-we-do-list li {
-  display: inline-block;
+.what-we-do-list {
+  display: flex;
 }
+.what-we-do-list li:not(:last-child) {
+  margin-right: 30px;
+}
+
 .what-we-do-img {
   width: 370px;
   height: 294px;
@@ -149,18 +183,23 @@ body {
 
 .team {
   background-color: #f5f4fa;
-  padding: 94px 0 94px 0;
+  padding: 94px 0;
 }
+.team-list {
+  display: flex;
+}
+.team-list li:not(:last-child) {
+  margin-right: 30px;
+}
+
 .team-list li {
   background-color: var(--text-color-white);
-  display: inline-block;
-  border-radius: 4px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  /* внизу исправить!!!!!!!! delete */
-  margin: 5px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .photo {
+  width: 270px;
   margin-bottom: 30px;
 }
 .team-worker {
@@ -180,15 +219,12 @@ body {
 
 .footer {
   background-color: var(--background-color-gray);
+  padding: 60px 0;
 }
-.footer-nav {
-  padding: 60px 0 60px 0;
-}
-.logo {
-  display: inline-block;
+.footer .logo {
   margin-bottom: 20px;
 }
-footer .studio-logo {
+.footer .studio-logo {
   color: var(--text-color-white);
 }
 .footer-auth-nav .link {
@@ -196,21 +232,35 @@ footer .studio-logo {
   color: var(--text-color-auth-nav);
   font-style: normal;
 }
+.footer-auth-nav li:not(:last-child) {
+  margin-bottom: 9px;
+}
 .footer-auth-nav .address {
   color: var(--text-color-white);
 }
 
 /* оформление для сайта портфолио */
+.our-works {
+  padding: 94px 0;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  margin: 50px;
+}
 
 .button-icon {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  text-align: center;
   background-color: var(--background-color-bottom);
   padding: 6px 22px;
   border-radius: 4px;
   border: none;
+}
+.icon:not(:last-child) {
+  margin-right: 8px;
 }
 .current.button-icon,
 .button-icon:hover,
@@ -220,15 +270,33 @@ footer .studio-logo {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.project {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.project .item {
+  width: 370px;
+  margin: 0px 30px 30px 0px;
+  border: 1px solid var(--border-color-projects);
+}
+
+.project .item:nth-child(3n + 3) {
+  margin-right: 0px;
+}
+.project .item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
 .project-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin: 20px 24px 4px;
 }
 .project-type {
   font-size: 16px;
   line-height: 1.87;
   color: var(--text-color-grey);
+  margin: 0px 24px 20px;
 }
