--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,11 @@ body {
 .studio-logo {
   color: var(--text-color-black-logo);
 }
+
 .site-nav {
   display: flex;
   margin-left: 93px;
 }
-
 .site-nav .item:not(:last-child) {
   margin-right: 50px;
 }
@@ -87,6 +87,8 @@ body {
   color: var(--accent-color);
 }
 .contact-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
   color: var(--text-color-grey);
 }
 .auth-nav {
@@ -247,7 +249,7 @@ body {
 .button {
   display: flex;
   justify-content: center;
-  margin: 50px;
+  margin-bottom: 50px;
 }
 
 .button-icon {
